--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,7 +6,7 @@ media_folder: "images/uploads"
 public_folder: "/images/uploads"
 
 collections:
-  # Gallery that your mom can edit
+  # Gallery / Previous Events – your mom edits these
   - name: "gallery"
     label: "Gallery / Previous Events"
     files:
@@ -18,6 +18,7 @@ collections:
           - label: "Items"
             name: "items"
             widget: list
+            summary: "{{fields.title}}"
             fields:
               - { label: "Title", name: "title", widget: "string" }
               - { label: "Description", name: "description", widget: "text", required: false }
