--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,99 +5,93 @@ backend:
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
 
-site_url: "https://wellbridge.social"
-logo_url: "/images/logo-sign.jpg"
-
 collections:
-  - name: "site"
-    label: "Site Content"
-    delete: false
-    file: "content/site.json"
-    format: "json"
+  # ===========================
+  # HOMEPAGE CONTENT
+  # ===========================
+  - name: "homepage"
+    label: "Homepage Content"
+    file: "content/homepage.json"
     fields:
-      - { label: "Hero Eyebrow", name: "heroEyebrow", widget: "string" }
-      - { label: "Hero Heading", name: "heroHeading", widget: "string" }
-      - { label: "Hero Body", name: "heroBody", widget: "text" }
-      - { label: "Primary Button Label", name: "heroPrimaryCtaLabel", widget: "string" }
-      - { label: "Primary Button Link", name: "heroPrimaryCtaHref", widget: "string" }
-      - { label: "Secondary Button Label", name: "heroSecondaryCtaLabel", widget: "string" }
-      - { label: "Secondary Button Link", name: "heroSecondaryCtaHref", widget: "string" }
-      - { label: "Hero Callout", name: "heroCallout", widget: "string" }
+      - { label: "Hero Title", name: "hero_title", widget: "string" }
+      - { label: "Hero Subtitle", name: "hero_subtitle", widget: "string" }
+      - { label: "Hero Description", name: "hero_description", widget: "text" }
+      - { label: "Hero Background Image", name: "hero_image", widget: "image" }
 
-      - { label: "Welcome Title", name: "welcomeTitle", widget: "string" }
-      - { label: "Welcome Paragraph 1", name: "welcomeParagraph1", widget: "text" }
-      - { label: "Welcome Paragraph 2", name: "welcomeParagraph2", widget: "text" }
+  # ===========================
+  # ABOUT SECTION
+  # ===========================
+  - name: "about"
+    label: "About Section"
+    file: "content/about.json"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Image", name: "image", widget: "image" }
 
-      - { label: "Venue Details Title", name: "venueDetailsTitle", widget: "string" }
-      - { label: "Detail 1", name: "venueDetail1", widget: "string" }
-      - { label: "Detail 2", name: "venueDetail2", widget: "string" }
-      - { label: "Detail 3", name: "venueDetail3", widget: "string" }
-      - { label: "Detail 4", name: "venueDetail4", widget: "string" }
-      - { label: "Detail 5", name: "venueDetail5", widget: "string" }
+  # ===========================
+  # VENUE DETAILS
+  # ===========================
+  - name: "venue"
+    label: "Venue Details"
+    file: "content/venue.json"
+    fields:
+      - { label: "Address", name: "address", widget: "string" }
+      - { label: "Phone Number", name: "phone", widget: "string" }
+      - label: "Included Items"
+        name: "included_items"
+        widget: "list"
+        fields:
+          - { label: "Item", name: "item", widget: "string" }
+      - label: "Room Details"
+        name: "rooms"
+        widget: "list"
+        fields:
+          - { label: "Room Name", name: "name", widget: "string" }
+          - { label: "Capacity", name: "capacity", widget: "string" }
+          - { label: "Day Price", name: "day_price", widget: "string" }
+          - { label: "Evening Price", name: "evening_price", widget: "string" }
 
-      - { label: "Events Title", name: "eventsTitle", widget: "string" }
-      - { label: "Events Body", name: "eventsBody", widget: "text" }
+  # ===========================
+  # RENTALS PAGE
+  # ===========================
+  - name: "rentals"
+    label: "Rentals Page"
+    file: "content/rentals.json"
+    fields:
+      - { label: "Header Title", name: "header", widget: "string" }
+      - { label: "Description", name: "description", widget: "text" }
+      - label: "Rental Options"
+        name: "options"
+        widget: "list"
+        fields:
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Description", name: "desc", widget: "text" }
+          - { label: "Price", name: "price", widget: "string" }
 
-      - { label: "Rentals Title", name: "rentalsTitle", widget: "string" }
-      - { label: "Rentals Intro", name: "rentalsIntro", widget: "text" }
-      - { label: "Rentals Banner", name: "rentalsBanner", widget: "text" }
+  # ===========================
+  # FAQ PAGE
+  # ===========================
+  - name: "faq"
+    label: "FAQ List"
+    file: "content/faq.json"
+    fields:
+      - label: "Questions"
+        name: "questions"
+        widget: "list"
+        fields:
+          - { label: "Question", name: "question", widget: "string" }
+          - { label: "Answer", name: "answer", widget: "text" }
 
-      - { label: "Large Room Title", name: "largeRoomTitle", widget: "string" }
-      - { label: "Large Room Guests", name: "largeRoomGuests", widget: "string" }
-      - { label: "Large Room Day Price", name: "largeRoomDayPrice", widget: "string" }
-      - { label: "Large Room Evening Price", name: "largeRoomEveningPrice", widget: "string" }
-
-      - { label: "Small Room Title", name: "smallRoomTitle", widget: "string" }
-      - { label: "Small Room Guests", name: "smallRoomGuests", widget: "string" }
-      - { label: "Small Room Day Price", name: "smallRoomDayPrice", widget: "string" }
-      - { label: "Small Room Evening Price", name: "smallRoomEveningPrice", widget: "string" }
-
-      - { label: "Clean Up Title", name: "cleanUpTitle", widget: "string" }
-      - { label: "Clean Up Body", name: "cleanUpBody", widget: "text" }
-
-      - { label: "Tables Title", name: "tablesTitle", widget: "string" }
-      - { label: "Tables Body", name: "tablesBody", widget: "text" }
-
-      - { label: "Alcohol Title", name: "alcoholTitle", widget: "string" }
-      - { label: "Alcohol Body", name: "alcoholBody", widget: "text" }
-
-      - { label: "Plan Title", name: "planTitle", widget: "string" }
-      - { label: "Plan Intro", name: "planIntro", widget: "text" }
-      - { label: "Step 1 Title", name: "step1Title", widget: "string" }
-      - { label: "Step 1 Body", name: "step1Body", widget: "text" }
-      - { label: "Step 2 Title", name: "step2Title", widget: "string" }
-      - { label: "Step 2 Body", name: "step2Body", widget: "text" }
-      - { label: "Step 3 Title", name: "step3Title", widget: "string" }
-      - { label: "Step 3 Body", name: "step3Body", widget: "text" }
-
-      - { label: "FAQs Title", name: "faqsTitle", widget: "string" }
-      - { label: "FAQs Intro", name: "faqsIntro", widget: "text" }
-      - { label: "FAQ 1 Question", name: "faq1Question", widget: "string" }
-      - { label: "FAQ 1 Answer", name: "faq1Answer", widget: "text" }
-      - { label: "FAQ 2 Question", name: "faq2Question", widget: "string" }
-      - { label: "FAQ 2 Answer", name: "faq2Answer", widget: "text" }
-      - { label: "FAQ 3 Question", name: "faq3Question", widget: "string" }
-      - { label: "FAQ 3 Answer", name: "faq3Answer", widget: "text" }
-      - { label: "FAQ 4 Question", name: "faq4Question", widget: "string" }
-      - { label: "FAQ 4 Answer", name: "faq4Answer", widget: "text" }
-
-      - { label: "How It Started Title", name: "howTitle", widget: "string" }
-      - { label: "How Paragraph 1", name: "howParagraph1", widget: "text" }
-      - { label: "How Paragraph 2", name: "howParagraph2", widget: "text" }
-
-      - { label: "Commitment Title", name: "commitmentTitle", widget: "string" }
-      - { label: "Commitment 1", name: "commitment1", widget: "string" }
-      - { label: "Commitment 2", name: "commitment2", widget: "string" }
-      - { label: "Commitment 3", name: "commitment3", widget: "string" }
-      - { label: "Commitment 4", name: "commitment4", widget: "string" }
-
-      - { label: "Contact Title", name: "contactTitle", widget: "string" }
-      - { label: "Contact Intro", name: "contactIntro", widget: "text" }
-      - { label: "Contact Info Title", name: "contactInfoTitle", widget: "string" }
-      - { label: "Contact Venue Name", name: "contactVenueName", widget: "string" }
-      - { label: "Contact Address", name: "contactAddress", widget: "string" }
-      - { label: "Contact Phone", name: "contactPhone", widget: "string" }
-      - { label: "Contact Note", name: "contactNote", widget: "text" }
-      - { label: "Contact Call/Text Line", name: "contactCallOrText", widget: "text" }
-
-      - { label: "Footer Text", name: "footerText", widget: "string" }
+  # ===========================
+  # CONTACT PAGE
+  # ===========================
+  - name: "contact"
+    label: "Contact Information"
+    file: "content/contact.json"
+    fields:
+      - { label: "Business Name", name: "business_name", widget: "string" }
+      - { label: "Address", name: "address", widget: "string" }
+      - { label: "Phone", name: "phone", widget: "string" }
+      - { label: "Email", name: "email", widget: "string" }
+      - { label: "Additional Notes", name: "notes", widget: "text" }
