--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,11 +6,12 @@ media_folder: "images/uploads"
 public_folder: "/images/uploads"
 
 collections:
-  # ===========================
-  # HOMEPAGE CONTENT
-  # ===========================
+
+  # -------------------------
+  # HOMEPAGE
+  # -------------------------
   - name: "homepage"
-    label: "Homepage Content"
+    label: "Homepage"
     file: "content/homepage.json"
     fields:
       - { label: "Hero Title", name: "hero_title", widget: "string" }
@@ -18,62 +19,54 @@ collections:
       - { label: "Hero Description", name: "hero_description", widget: "text" }
       - { label: "Hero Background Image", name: "hero_image", widget: "image" }
 
-  # ===========================
-  # ABOUT SECTION
-  # ===========================
+  # -------------------------
+  # ABOUT
+  # -------------------------
   - name: "about"
     label: "About Section"
     file: "content/about.json"
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Image", name: "image", widget: "image" }
+      - { label: "Body Text", name: "body", widget: "text" }
 
-  # ===========================
+  # -------------------------
   # VENUE DETAILS
-  # ===========================
+  # -------------------------
   - name: "venue"
     label: "Venue Details"
     file: "content/venue.json"
     fields:
-      - { label: "Address", name: "address", widget: "string" }
-      - { label: "Phone Number", name: "phone", widget: "string" }
-      - label: "Included Items"
-        name: "included_items"
+      - { label: "Large Room Capacity", name: "large_capacity", widget: "string" }
+      - { label: "Small Room Capacity", name: "small_capacity", widget: "string" }
+      - { label: "Included Items", name: "included_items", widget: "list" }
+      - label: "Room Pricing"
+        name: "room_pricing"
         widget: "list"
         fields:
-          - { label: "Item", name: "item", widget: "string" }
-      - label: "Room Details"
-        name: "rooms"
-        widget: "list"
-        fields:
-          - { label: "Room Name", name: "name", widget: "string" }
-          - { label: "Capacity", name: "capacity", widget: "string" }
+          - { label: "Room Name", name: "room", widget: "string" }
           - { label: "Day Price", name: "day_price", widget: "string" }
           - { label: "Evening Price", name: "evening_price", widget: "string" }
 
-  # ===========================
-  # RENTALS PAGE
-  # ===========================
+  # -------------------------
+  # RENTALS
+  # -------------------------
   - name: "rentals"
-    label: "Rentals Page"
+    label: "Rentals"
     file: "content/rentals.json"
     fields:
-      - { label: "Header Title", name: "header", widget: "string" }
-      - { label: "Description", name: "description", widget: "text" }
+      - { label: "Description", name: "desc", widget: "text" }
       - label: "Rental Options"
         name: "options"
         widget: "list"
         fields:
           - { label: "Title", name: "title", widget: "string" }
-          - { label: "Description", name: "desc", widget: "text" }
           - { label: "Price", name: "price", widget: "string" }
 
-  # ===========================
-  # FAQ PAGE
-  # ===========================
+  # -------------------------
+  # FAQ
+  # -------------------------
   - name: "faq"
-    label: "FAQ List"
+    label: "Frequently Asked Questions"
     file: "content/faq.json"
     fields:
       - label: "Questions"
@@ -83,15 +76,14 @@ collections:
           - { label: "Question", name: "question", widget: "string" }
           - { label: "Answer", name: "answer", widget: "text" }
 
-  # ===========================
-  # CONTACT PAGE
-  # ===========================
+  # -------------------------
+  # CONTACT
+  # -------------------------
   - name: "contact"
-    label: "Contact Information"
+    label: "Contact Info"
     file: "content/contact.json"
     fields:
-      - { label: "Business Name", name: "business_name", widget: "string" }
-      - { label: "Address", name: "address", widget: "string" }
-      - { label: "Phone", name: "phone", widget: "string" }
+      - { label: "Business Address", name: "address", widget: "string" }
+      - { label: "Phone Number", name: "phone", widget: "string" }
       - { label: "Email", name: "email", widget: "string" }
       - { label: "Additional Notes", name: "notes", widget: "text" }
